test_regress/t/t_pp_underline_bad.out
%Error: t/t_pp_underline_bad.v:8:4: Extra underscore in meta-comment; use /*verilator {...}*/ not /*verilator_{...}*/
   // verilator_no_inline_module
   ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~
%Error: t/t_pp_underline_bad.v:8:4: Unknown verilator comment: /*verilator _no_inline_module*/
   /*verilator _no_inline_module*/ 
   ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
%Error: Exiting due to
